<resources>
<string name="app_name" translatable="false">Ghost Commander</string>
<string name="file">New</string>
<string name="location">Location</string>
<string name="list">List</string>
<string name="app">App</string>
<string name="help">Help</string>
<string name="F1">Help</string>
<string name="F2">Rename</string>
<string name="F3">View</string>
<string name="F4">Edit</string>
<string name="new_item">New</string>
<string name="F5F6">Copy/Move</string>
<string name="F8">Del</string>
<string name="F9">Prefs</string>
<string name="F10">Exit</string>
<string name="oth_sh_this">Show same folder</string>
<string name="oth_sh_dir">Open \"%s\" in other panel</string>
<string name="eq">Same</string>
<string name="change">Toggle</string>
<string name="tgl">Toggle</string>
<string name="sz">Info</string>
<string name="dirsz">Folder sizes</string>
<string name="refresh">Refresh</string>
<string name="swap">Swap</string>
<string name="compare">Compare</string>
<string name="filter">Filter</string>
<string name="filter_canceled">Filter canceled</string>
<string name="enter">Change location</string>
<string name="home">Home</string>
<string name="sdcard" translatable="false">/sdcard</string>
<string name="softkbd">Keyboard</string>
<string name="enter_b">Location</string>
<string name="add_fav">Add to favorites</string>
<string name="add_fav_b">Add fave</string>
<string name="remount_b">Remount /system</string>
<string name="remount">Remount</string>
<string name="hidden">Hidden</string>
<string name="rescan">Rescan media</string>
<string name="install">Install</string>
<string name="favs">Favorites</string>
<string name="df_dnl">Downloads</string>
<string name="df_cam">Camera</string>
<string name="df_pic">Pictures</string>
<string name="df_mus">Music</string>
<string name="df_mov">Movies</string>
<string name="local">Local storage</string>
<string name="temp">Temporary storage</string>
<string name="external">External card</string>
<string name="media">Media Store</string>
<string name="saf">Storage Access Framework</string>
<string name="ftp">FTP site</string>
<string name="sftp">SFTP site</string>
<string name="smb">Windows share</string>
<string name="plugins">Browse plugins</string>
<string name="root">Root mode</string>
<string name="mount">Mount points</string>
<string name="mount_b">Mounts</string>
<string name="apps">Apps</string>
<string name="exit">Exit</string>
<string name="search_file">Search</string>
<string name="sel_dlg">Select</string>
<string name="select_between">Select between</string>
<string name="toggle_panels_mode">Change panels mode</string>
<string name="prefs">Settings</string>
<string name="about">About</string>
<string name="keys">Brief help</string>
<string name="go_button">Go</string>
<string name="trashcan">Trash can</string>
<string name="select">Select</string>
<string name="data_settings">File lists</string>
<string name="layout_settings">Appearance</string>
<string name="input_settings">Input</string>
<string name="selection_zone_setup">Selection area</string>
<string name="summary_selection_zone_setup">Customize the way files and folders are selected</string>
<string name="show_confirm">Confirmations</string>
<string name="summary_show_confirm">Show a message after certain operations</string>
<string name="advanced">Advanced</string>
<string name="advanced_settings">Miscellaneous</string>
<string name="summary_advanced_settings">Extra settings for advanced users</string>
<string name="remote_open_size">File size threshold</string>
<string name="summary_remote_open_size">Maximum remote file size allowed to be opened locally</string>
<string name="compare_content">Compare content</string>
<string name="summary_compare_content">Compare file contents for files with similar names and sizes</string>
<string name="send_content">Send using content provider</string>
<string name="summary_send_content">Try to untick if your file sending app doesn\'t implement a ContentResolver</string>
<string name="open_content">Open using content provider</string>
<string name="summary_open_content">Try to open a file via the content provider rather than as a regular file.</string>
<string name="panels_mode">Side-by-side panels</string>
<string name="summary_panels_mode">Show both panels side-by-side in a split screen view</string>
<string name="two_lines">Two lines in a row</string>
<string name="summary_two_lines">Show file attributes below file names</string>
<string name="icons">File Icons</string>
<string name="show_icons">Enable icons</string>
<string name="summary_show_icons">Show file and folder icons instead of just text</string>
<string name="toolbar_settings">Toolbar</string>
<string name="summary_toolbar_settings">Customize the toolbar at the bottom of the screen</string>
<string name="show_actionbar">Enable Action Bar</string>
<string name="summary_show_actionbar">Show the Action Bar at the top of the screen. Restart required.</string>
<string name="show_toolbar">Enable toolbar</string>
<string name="summary_show_toolbar">Show the toolbar at the bottom of the screen</string>
<string name="show_hotkeys">Show hot keys</string>
<string name="summary_show_hotkeys">Show hot key shortcuts on certain buttons</string>
<string name="show_emoji">Show icons</string>
<string name="summary_show_emoji">Show emoji icons </string>
<string name="show_caption">Show caption</string>
<string name="summary_show_caption">Show button text caption</string>
<string name="tb_height">Toolbar area height</string>
<string name="summary_tb_height">On some devices it would be convenient to have a larger toolbar area. Set a value in inches, 0 for default.</string>
<string name="toolbar_preference">Customize the toolbar</string>
<string name="summary_toolbar_preference">Select which buttons to display, edit and arrange them</string>
<string name="finger_friendly">Finger-friendly</string>
<string name="summary_finger_friendly">Enlarge the user interface elements</string>
<string name="prevent_root">Warn on leaving /sdcard</string>
<string name="summary_prevent_root">Issue a warning when going to a device\'s root folder</string>
<string name="show_root">Show advanced home items</string>
<string name="summary_show_root">Home view will include \"Root mode\", \"Mount points\" and \"Media Store\"</string>
<string name="root_root">Automatic root mode</string>
<string name="summary_root_root">Switch to root mode when going to a device\'s root folder</string>
<string name="thumbnails">Enable thumbnails</string>
<string name="summary_thumbnails">Show thumbnails for images instead of icons</string>
<string name="pdf_preview">PDF preview</string>
<string name="summary_pdf_preview">Show PDF previews for PDF files</string>
<string name="thumbnails_size">Thumbnail size</string>
<string name="summary_thumbnails_size">Set the percentage value in relation to icon size</string>
<string name="font_size">Font size</string>
<string name="summary_font_size">Set the font size</string>
<string name="left_panel_settings">Left panel</string>
<string name="right_panel_settings">Right panel</string>
<string name="detailed_view_SbS">Detailed side-by-side mode</string>
<string name="summary_detailed_view_SbS">Show size and date for files in side-by-side mode</string>
<string name="detailed_view_Ovr">Detailed overlapped mode</string>
<string name="summary_detailed_view_Ovr">Show size and date for files in overlapped mode</string>
<string name="sorting">Sorting method</string>
<string name="summary_sorting">Choose how to sort files and folders</string>
<string name="sort_case">Ignore case in sorting</string>
<string name="summary_sort_case">Tick this to ignore case sensitivity in file and folder sorting</string>
<string name="show_hidden">Show hidden files</string>
<string name="summary_show_hidden">Show files and folders with a preceding dot in their names</string>
<string name="compatibility_settings">Hardware buttons</string>
<string name="summary_compatibility_settings">Customize the overriding of hardware button functions</string>
<string name="panels_sliding">Enable sliding gesture</string>
<string name="summary_panels_sliding">Switch panels by a horizontal scroll gesture</string>
<string name="arrow_mode">Override arrow buttons</string>
<string name="summary_arrow_mode">Left/right arrows perform toggle/select</string>
<string name="volume_mode">Override volume buttons</string>
<string name="summary_volume_mode">Volume buttons perform toggle/select</string>
<string name="exit_on_back">Back button exits</string>
<string name="summary_exit_on_back">Back button closes the app</string>
<string name="colors">Colors</string>
<string name="summary_colors">Modify background and foreground colors</string>
<string name="bgr_color_picker">Background</string>
<string name="summary_bgr_color_picker">Choose a color for the main background</string>
<string name="fgr_color_picker">Foreground</string>
<string name="summary_fgr_color_picker">Choose a color for file names and attributes</string>
<string name="cur_color_picker">Focused</string>
<string name="summary_cur_color_picker">Choose a color for items in focus</string>
<string name="sel_color_picker">Selected background</string>
<string name="summary_sel_color_picker">Choose a background color for selected files and the current panel\'s title</string>
<string name="sfg_color_picker">Selected foreground</string>
<string name="summary_sfg_color_picker">Choose a text color for selected files and the current panel\'s title</string>
<string name="ufg_color_picker">Unfocused foreground</string>
<string name="summary_ufg_color_picker">Choose a text color for the panel title when not focused</string>
<string name="ttl_color_picker">Panel title</string>
<string name="summary_ttl_color_picker">Choose a background color for the panel title</string>
<string name="div_color_picker">Divider</string>
<string name="summary_div_color_picker">Choose a color for the divider between panels</string>
<string name="tbg_color_picker">Toolbar background</string>
<string name="summary_tbg_color_picker">Choose a background color for the toolbar bar</string>
<string name="color_themes">Themes</string>
<string name="summary_color_themes">Reset all custom colors to one chosen theme</string>
<string name="language">Language</string>
<string name="summary_language">Override the system language</string>
<string name="busybox_location">Path to BusyBox</string>
<string name="summary_busybox_location">Specify the location of the BusyBox executable</string>
<string name="su_location">Path to su</string>
<string name="summary_su_location">Specify the location of the su executable</string>
<string name="cpmv_err_ign">Ignore permission errors on copy/move</string>
<string name="summary_cpmv_err_ign">Suppress root mode errors when a file is copied to a file system which does not support permissions.</string>
<string name="foreground_service">Runs file operations in a foreground service</string>
<string name="summary_foreground_service">If when the device\'s sleep breaks a file operation, try to check this option on. A notification icon will be shown all the time the app is active.</string>
<string name="system_notifications">Application notifications</string>
<string name="summary_system_notifications">Manage which notifications can be shown by the application.</string>
<string name="show_scrollbars">File panels have scrollbar</string>
<string name="summary_show_scrollbars">Uncheck to disable the file panels scroll bars.</string>
<string name="sort_by_access_date">Sort by access date</string>
<string name="summary_sort_by_access_date">Allow sorting by file access date</string>
<string name="scan_all">Scan all files</string>
<string name="summary_scan_all">Untick to scan only media files</string>
<string name="go_up">Parent</string>
<string name="go_top">Top</string>
<string name="go_end">Bottom</string>
<string name="donate">Donate</string>
<string name="online_help">Online help</string>
</resources>