<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/data_settings">
        <PreferenceScreen
                android:key="left_panel_settings"
                android:title="@string/left_panel_settings">
		        <CheckBoxPreference
		                android:key="left_detailed_SbS"
		                android:title="@string/detailed_view_SbS"
		                android:summary="@string/summary_detailed_view_SbS" 
		                android:defaultValue="true"/>
		        <CheckBoxPreference
		                android:key="left_detailed_Ovr"
		                android:title="@string/detailed_view_Ovr"
		                android:summary="@string/summary_detailed_view_Ovr" 
		                android:defaultValue="true"/>
		        <ListPreference
		                android:key="left_sorting"
		                android:title="@string/sorting"
		                android:summary="@string/summary_sorting"
		                android:entries="@array/sorting"
		                android:entryValues="@array/sorting_vals"
		                android:dialogTitle="@string/sorting"
		                android:defaultValue="n"/>                
		        <CheckBoxPreference
		                android:key="left_show_hidden"
		                android:title="@string/show_hidden"
		                android:summary="@string/summary_show_hidden" 
		                android:defaultValue="true"/>
		</PreferenceScreen>
        <PreferenceScreen
                android:key="right_panel_settings"
                android:title="@string/right_panel_settings">
    	        <CheckBoxPreference
    	                android:key="right_detailed_SbS"
    	                android:title="@string/detailed_view_SbS"
    	                android:summary="@string/summary_detailed_view_SbS" 
    	                android:defaultValue="true"/>
    	        <CheckBoxPreference
    	                android:key="right_detailed_Ovr"
    	                android:title="@string/detailed_view_Ovr"
    	                android:summary="@string/summary_detailed_view_Ovr" 
    	                android:defaultValue="true"/>
              <ListPreference
                      android:key="right_sorting"
                      android:title="@string/sorting"
                      android:summary="@string/summary_sorting"
                      android:entries="@array/sorting"
                      android:entryValues="@array/sorting_vals"
                      android:dialogTitle="@string/sorting"
                      android:defaultValue="n"/>
    	        <CheckBoxPreference
    	                android:key="right_show_hidden"
    	                android:title="@string/show_hidden"
    	                android:summary="@string/summary_show_hidden" 
    	                android:defaultValue="true"/>
      </PreferenceScreen>
      <CheckBoxPreference
                android:key="case_ignore"
                android:title="@string/sort_case"
                android:summary="@string/summary_sort_case"
                android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/layout_settings">
        <ListPreference
                android:key="panels_sxs_mode"
                android:title="@string/panels_mode"
                android:summary="@string/summary_panels_mode"
                android:entries="@array/panels_mode"
                android:entryValues="@array/panels_mode_vals"
                android:dialogTitle="@string/panels_mode"
                android:defaultValue="y"/>                
        <CheckBoxPreference
                android:key="two_lines"
                android:title="@string/two_lines"
                android:summary="@string/summary_two_lines"
                android:defaultValue="true"/>
        <ListPreference
                android:key="finger_friendly_a"
                android:title="@string/finger_friendly"
                android:summary="@string/summary_finger_friendly"
                android:entries="@array/panels_mode"
                android:entryValues="@array/panels_mode_vals"
                android:dialogTitle="@string/finger_friendly"
                android:defaultValue="y"/>
        <PreferenceScreen
                android:key="icons"
                android:title="@string/icons">
                <CheckBoxPreference
                        android:key="show_icons"
                        android:title="@string/show_icons"
                        android:summary="@string/summary_show_icons"
                        android:defaultValue="true"/>
                <CheckBoxPreference
                        android:key="show_thumbnails"
                        android:title="@string/thumbnails"
                        android:summary="@string/summary_thumbnails"
                        android:defaultValue="true"/>
                <CheckBoxPreference
                        android:key="pdf_preview"
                        android:dependency="show_thumbnails"
                        android:title="@string/pdf_preview"
                        android:summary="@string/summary_pdf_preview"
                        android:defaultValue="true"/>
                <PreferenceScreen
                    android:key="thumbnails_size"
                    android:title="@string/thumbnails_size"
                    android:summary="@string/summary_thumbnails_size"
                    android:dependency="show_thumbnails"
                    android:defaultValue="125"/>
        </PreferenceScreen>
        <ListPreference
                android:key="font_size"
                android:title="@string/font_size"
                android:summary="@string/summary_font_size"
                android:entries="@array/font_size"
                android:entryValues="@array/font_size"
                android:dialogTitle="@string/font_size"
                android:defaultValue="14"/>
        <ListPreference
                android:key="text_font_size"
                android:summary="@string/summary_font_size"
                android:entries="@array/font_size"
                android:entryValues="@array/font_size"
                android:dialogTitle="@string/font_size"
                android:defaultValue="14"/>
	    <PreferenceScreen
                android:key="colors"
                android:title="@string/colors"
                android:summary="@string/summary_colors">
           <ListPreference
                    android:key="color_themes"
                    android:title="@string/color_themes"
                    android:summary="@string/summary_color_themes"
                    android:entries="@array/color_themes"
                    android:entryValues="@array/color_themes_vals"
                    android:dialogTitle="@string/color_themes"
                    android:defaultValue="a"
                    />
           <PreferenceCategory
               android:title="@string/colors">
              <PreferenceScreen
                  android:key="fgr_color_picker"
                  android:title="@string/fgr_color_picker"
                  android:summary="@string/summary_fgr_color_picker">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="bgr_color_picker"
                  android:title="@string/bgr_color_picker"
                  android:summary="@string/summary_bgr_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="cur_color_picker"
                  android:title="@string/cur_color_picker"
                  android:summary="@string/summary_cur_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="sel_color_picker"
                  android:title="@string/sel_color_picker"
                  android:summary="@string/summary_sel_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="sfg_color_picker"
                  android:title="@string/sfg_color_picker"
                  android:summary="@string/summary_sfg_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="ttl_color_picker"
                  android:title="@string/ttl_color_picker"
                  android:summary="@string/summary_ttl_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="ufg_color_picker"
                  android:title="@string/ufg_color_picker"
                  android:summary="@string/summary_ufg_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="div_color_picker"
                  android:title="@string/div_color_picker"
                  android:summary="@string/summary_div_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="btn_color_picker"
                  android:title="@string/btn_color_picker"
                  android:summary="@string/summary_btn_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
              <PreferenceScreen
                  android:key="tbg_color_picker"
                  android:title="@string/tbg_color_picker"
                  android:summary="@string/summary_tbg_color_picker"
                  android:icon="@drawable/square">
              </PreferenceScreen>
           </PreferenceCategory>
        </PreferenceScreen>
        <ListPreference
                android:key="language"
                android:title="@string/language"
                android:summary="@string/summary_language"
                android:entries="@array/language"
                android:entryValues="@array/language_vals"
                android:dialogTitle="@string/language"
                android:defaultValue=""/>                
    </PreferenceCategory>
    <PreferenceCategory
        android:key="input_settings"
        android:title="@string/input_settings">
        <ListPreference
                android:key="show_actionbar"
                android:title="@string/show_actionbar"
                android:summary="@string/summary_show_actionbar"
                android:entries="@array/panels_mode"
                android:entryValues="@array/panels_mode_vals"
                android:dialogTitle="@string/show_actionbar"
                android:defaultValue="a"/>
        <PreferenceScreen
                android:key="toolbar_settings"
                android:title="@string/toolbar_settings"
                android:summary="@string/summary_toolbar_settings">
            <CheckBoxPreference
                        android:key="show_toolbar"
                        android:title="@string/show_toolbar"
                        android:summary="@string/summary_show_toolbar"
                        android:defaultValue="true"/>
                <CheckBoxPreference
                        android:key="show_hotkeys"
                        android:dependency="show_toolbar"
                        android:title="@string/show_hotkeys"
                        android:summary="@string/summary_show_hotkeys"
                        android:defaultValue="false"/>
                <CheckBoxPreference
                        android:key="show_emoji"
                        android:dependency="show_toolbar"
                        android:title="@string/show_emoji"
                        android:summary="@string/summary_show_emoji"
                        android:defaultValue="true"/>
                <CheckBoxPreference
                        android:key="show_caption"
                        android:dependency="show_toolbar"
                        android:title="@string/show_caption"
                        android:summary="@string/summary_show_caption"
                        android:defaultValue="true"/>
                <EditTextPreference
                    android:key="tb_height"
                    android:dependency="show_toolbar"
                    android:title="@string/tb_height"
                    android:summary="@string/summary_tb_height"
                    android:defaultValue="0"/>
                <PreferenceScreen
                        android:key="toolbar_preference"
                        android:dependency="show_toolbar"
                        android:title="@string/toolbar_preference"
                        android:summary="@string/summary_toolbar_preference">
                </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="selection_zone"
                android:title="@string/selection_zone_setup"
                android:summary="@string/summary_selection_zone_setup">
        </PreferenceScreen>
        <CheckBoxPreference
                android:key="panels_sliding"
                android:title="@string/panels_sliding"
                android:summary="@string/summary_panels_sliding"
                android:defaultValue="true"/>
        <PreferenceScreen
                android:key="compatibility_settings"
                android:title="@string/compatibility_settings"
                android:summary="@string/summary_compatibility_settings">
                <CheckBoxPreference
                            android:key="arrow_legc"
                            android:title="@string/arrow_mode"
                            android:summary="@string/summary_arrow_mode"
                            android:defaultValue="false"/>
                <CheckBoxPreference
                            android:key="volume_legc"
                            android:title="@string/volume_mode"
                            android:summary="@string/summary_volume_mode"
                            android:defaultValue="false"/>
                <CheckBoxPreference
                            android:key="exit_on_back"
                            android:title="@string/exit_on_back"
                            android:summary="@string/summary_exit_on_back"
                            android:defaultValue="false"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_advanced"
        android:title="@string/advanced">
        <CheckBoxPreference
                android:key="show_root"
                android:title="@string/show_root"
                android:summary="@string/summary_show_root"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="show_confirm"
                android:title="@string/show_confirm"
                android:summary="@string/summary_show_confirm"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="prevent_root"
                android:title="@string/prevent_root"
                android:summary="@string/summary_prevent_root"
                android:defaultValue="true"/>
       <PreferenceScreen
            android:key="advanced_preferences"
            android:title="@string/advanced_settings"
            android:summary="@string/summary_advanced_settings">
          <CheckBoxPreference
                  android:key="root_root"
                  android:title="@string/root_root"
                  android:summary="@string/summary_root_root"
                  android:defaultValue="false"/>
            <EditTextPreference 
                android:key="su_path" 
                android:title="@string/su_location" 
                android:summary="@string/summary_su_location" 
                android:defaultValue="su"/> 
		    <EditTextPreference 
		        android:key="busybox_path" 
		        android:title="@string/busybox_location" 
		        android:summary="@string/summary_busybox_location" 
		        android:defaultValue="busybox"/>
		    <CheckBoxPreference 
		        android:key="cpmv_err_ign" 
		        android:title="@string/cpmv_err_ign" 
		        android:summary="@string/summary_cpmv_err_ign" 
		        android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="open_content"
                android:title="@string/open_content"
                android:summary="@string/summary_open_content"
		        android:defaultValue="true"/>
                />
            <CheckBoxPreference
                android:key="send_content"
                android:title="@string/send_content"
                android:summary="@string/summary_send_content"
                android:defaultValue="true"/>
    	    <EditTextPreference 
		        android:key="remote_open_size" 
		        android:title="@string/remote_open_size" 
		        android:summary="@string/summary_remote_open_size" 
		        android:defaultValue="5000000"/>
		    <CheckBoxPreference
                android:key="compare_content"
                android:title="@string/compare_content"
                android:summary="@string/summary_compare_content"
                android:defaultValue="false"/>
		    <CheckBoxPreference
                android:key="scan_all"
                android:title="@string/scan_all"
                android:summary="@string/summary_scan_all"
                android:defaultValue="true"/>
		    <CheckBoxPreference
                android:key="foreground_service"
                android:title="@string/foreground_service"
                android:summary="@string/summary_foreground_service"
                android:defaultValue="false"/>
            <PreferenceScreen
                android:key="system_notifications"
                android:title="@string/system_notifications"
                android:summary="@string/summary_system_notifications"/>
		    <CheckBoxPreference
                android:key="show_scrollbars"
                android:title="@string/show_scrollbars"
                android:summary="@string/summary_show_scrollbars"
                android:defaultValue="true"/>
		    <CheckBoxPreference
                android:key="sort_by_access_date"
                android:title="@string/sort_by_access_date"
                android:summary="@string/summary_sort_by_access_date"
                android:defaultValue="false"/>
		    </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
